<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">EnMusic</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="or">or</string>
    <string name="logo">Spotify</string>
    <string name="login">Login</string>
    <string name="username_hint">Username</string>
    <string name="register">Register</string>
    <string name="no_music">Tidak ada musik tersedia</string>
    <string name="add_song">Tambah Music</string>
    <string name="delete_song">Hapus</string>
    <string name="add_to_playlist">Tambah ke playlist</string>
    <string name="search_music">Cari Musik</string>
    <string name="already_have_account_login">Already Have Account Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="search_hint">Cari...</string>
    <string name="dont_have_account_sign_up" tools:ignore="StringEscaping">Don\'t have an account? Sign up</string>
    <string name="logo_description">Logo Splash Screen</string>
</resources>